== Firebug Lite Change Log ==

2009-04-19 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js Fixed multiple issues with the HTML Tree:
      o Issue 1658: FB Lite HTML view body tag occasionally has multiple + signs
      o Issue 1659: FB Lite stops parsing childnodes when it reaches HTML comments
      o Issue 1568: Firebug Lite: Inspect button often fails to scroll the html line into view when an element is clicked
      o Simplified discovery of body tag
      o Object tags displayed as function() in HTML tree
      o Disabled trimming of text content, users expect to see things the same way they are displayed in Firebug.

2009-04-16 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1653: Removed reliability on firebug.liteFilename
                     Fixed a security issue in IE 7 (introduced via Microsoft Update)

2009-03-09 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1637: Script missing linebreaks in IE7, line numbers broken in all browsers

2009-03-09 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Added title to popup window

2009-03-09 Azer Koculu <azer@kodfabrik.com>
  * firebug-lite.js: Removed getElementPosXY method.
		     Added toggle method to settings object.

2009-03-07 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Fixed issue 1554: Text nodes could not be accessed through the inspect button.

2009-03-07 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1566: Added firebug.env.targetWindow variable to hold target window

2009-03-06 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Changed default for firebug.env.detectFirebug to false
                     Fixed issue 1555: Ajax calls ... we should not assume that the same domain policy is applied, use try catch instead
                     Fixed Issue 1541: Add XHR tab to Firebug Lite popup window